--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.marceaudavid.musicplayer"
-        minSdkVersion 28
+        applicationId "com.example.musicplayer"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
