--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 26 13:51:21 PDT 2020
-sdk.dir=C\:\\Users\\Justin\\AppData\\Local\\Android\\Sdk
+#Sun Nov 22 17:24:22 PST 2020
+sdk.dir=C\:\\Users\\miche\\AppData\\Local\\Android\\Sdk
